--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>Fit job</title>
@@ -33,6 +33,7 @@
                 <p class="city-name">Санкт-Петербург</p>
             </div>
         </nav>
+        <img class="header-toggler hidden" src="img/mob-menu_open.svg" width="28.14" height="23.81" alt="">
     </header>
     <main class="page-main">
         <section class="about">  
@@ -41,52 +42,56 @@
                     <span class="text-tomato">ПРЕМИУМ КЛАССА</span> <br>В САНКТ-ПЕТЕРБУРГЕ</h1>
                 <p>У вас есть возможность<br>посетить <span class="text-tomato">3 бесплатные</span><br>тренировки</p>
                 <div class="about-buttons-wr">
-                    <button type="button" class="button button--grey">Бесплатная консультация</button>
-                    <button type="button" class="button">Стать клиентом</button>
+                    <button type="button" class="button button--grey"></button>
+                    <button type="button" class="button button--tomato"></button>
                 </div>
             </div>
             <img class="about-ellipse--top" src="img/Ellipse 5.svg"  alt=" ">
             <img class="about-ellipse--bottom" src="img/Ellipse 6.svg"  alt=" ">
-            <img class="about-img" src="img/Group 553.svg" alt="">
-        </section>
-        <section class="advantages">
-            <ul class="advantages-list">
-                <li class="advantage-item advantage-item__img1">
-                    <h2>Персональный<br>тренинг</h2>
-                    <div class="advantage-more">
-                        <a href="#">Подробнее</a>
-                    </div>
-                </li>
-                <li class="advantage-item advantage-item__img2">
-                    <h2>Тренажерный<br>зал</h2>
-                    <div class="advantage-more">
-                        <a href="#">Подробнее</a>
-                    </div>
-                 </li>
-                 <li class="advantage-item advantage-item__img3">
-                    <h2>Бассейн и<br>спа зона</h2>
-                    <div class="advantage-more">
-                        <a href="#">Подробнее</a>
-                    </div>
-                 </li>
-                 <li class="advantage-item advantage-item__img4">
-                    <h2>Групповые<br>занятия</h2>
-                    <div class="advantage-more">
-                        <a href="#">Подробнее</a>
-                    </div>
-                 </li>
-            </ul>
-        </section>
-        <section class="offer">  
-            <div class="offer-wr">
-                <h1>Предложение <span class="text-tomato">месяца</span><br>
-                    в фитнесс-клубах<br><span class="text-tomato">fitjob</span></h1>
-                <p><span class="text-tomato">Специальное предложение</span><br>
-                    для наших новый гостей:<br><span class="text-tomato">Годовой</span> абонемент со<br> 
-                    <span class="text-tomato">скидкой 30%!</span></p>
-                <button type="button" class="button">Купить абонемент</button>
-            </div>
-        </section>
+            <img class="about-img" src="img/Group 553.avif" alt="">
+        </section>     
+        <div class="advantages-offer-wr">
+            <section class="advantages">
+                <ul class="advantages-list">
+                    <li class="advantage-item advantage-item__img1">
+                        <h2>Персональный<br>тренинг</h2>
+                        <div class="advantage-more">
+                            <a href="#">Подробнее</a>
+                        </div>
+                    </li>
+                    <li class="advantage-item advantage-item__img2">
+                        <h2>Тренажерный<br>зал</h2>
+                        <div class="advantage-more">
+                            <a href="#">Подробнее</a>
+                        </div>
+                     </li>
+                     <li class="advantage-item advantage-item__img3">
+                        <h2>Бассейн и<br>спа зона</h2>
+                        <div class="advantage-more">
+                            <a href="#">Подробнее</a>
+                        </div>
+                     </li>
+                     <li class="advantage-item advantage-item__img4">
+                        <h2>Групповые<br>занятия</h2>
+                        <div class="advantage-more">
+                            <a href="#">Подробнее</a>
+                        </div>
+                     </li>
+                </ul>
+            </section>
+            <section class="offer">  
+                <div class="offer-wr">
+                    <h1>Предложение <span class="text-tomato">месяца</span><br>
+                        в фитнесс-клубах<br><span class="text-tomato">fitjob</span></h1>
+                    <div class="offer-flexWr">
+                        <p><span class="text-tomato">Специальное предложение</span><br>
+                            для наших новый гостей:<br><span class="text-tomato">Годовой</span> абонемент со<br> 
+                            <span class="text-tomato">скидкой 30%!</span></p>
+                        <button type="button" class="button">Купить абонемент</button>
+                    </div>   
+                </div>
+            </section>
+        </div>
         <section class="rates">  
             <div class="rates-wr">
                 <h1>КЛУБНЫЕ КАРТЫ <span class="text-tomato">FITJOB</span></h1>
@@ -94,33 +99,33 @@
             </div>
             <ul class="rates-list">
                 <li class="rates-item">
-                    <h3>Клубная карта<br>на 1 месяц</h3>
-                    <p>— Безлимитный фитнес 24/7<br>
-                       — Тренировка с фитнес-коучем<br>
-                       — Пакет групповых тренировок<br>
-                       — 7 дней заморозки</p>
-                    <button type="button" class="button">Узнать стоимость</button>
+                    <h3>Клубная карта<br><span class="text-tomato--mob">на 1 месяц</span></h3>
+                    <p><span class="text-tomato--mob">—</span> Безлимитный фитнес 24/7<br>
+                        <span class="text-tomato--mob">—</span> Тренировка с фитнес-коучем<br>
+                        <span class="text-tomato--mob">—</span> Пакет групповых тренировок<br>
+                        <span class="text-tomato--mob">—</span> 7 дней заморозки</p>
+                    <button type="button" class="button"></button>
                 </li>
                 <li class="rates-item"> 
-                    <h3>Клубная карта<br>на 12 месяцев</h3>
-                    <p>— Безлимитный фитнес 24/7<br>
-                        — Тренировка с фитнес-коучем<br>
-                        — Пакет групповых тренировок<br>
-                        — 90 дней заморозки</p>
-                    <button type="button" class="button">Узнать стоимость</button>
+                    <h3>Клубная карта<br><span class="text-tomato--mob">на 12 месяцев</span></h3>
+                        <p><span class="text-tomato--mob">—</span> Безлимитный фитнес 24/7<br>
+                            <span class="text-tomato--mob">—</span> Тренировка с фитнес-коучем<br>
+                            <span class="text-tomato--mob">—</span> Пакет групповых тренировок<br>
+                            <span class="text-tomato--mob">—</span> 90 дней заморозки</p>
+                    <button type="button" class="button"></button>
                  </li>
                 <li class="rates-item">
-                    <h3>Клубная карта<br>на 6 месяцев</h3>
-                    <p>— Безлимитный фитнес 24/7<br>
-                        — Тренировка с фитнес-коучем<br>
-                        — Пакет групповых тренировок<br>
-                        — 30 дней заморозки</p>
-                    <button type="button" class="button">Узнать стоимость</button>
+                    <h3>Клубная карта<br><span class="text-tomato--mob">на 6 месяцев</span></h3>
+                    <p><span class="text-tomato--mob">—</span> Безлимитный фитнес 24/7<br>
+                        <span class="text-tomato--mob">—</span> Тренировка с фитнес-коучем<br>
+                        <span class="text-tomato--mob">—</span> Пакет групповых тренировок<br>
+                        <span class="text-tomato--mob">—</span> 30 дней заморозки</p>
+                    <button type="button" class="button"></button>
                  </li>
                 <li class="rates-item">
                     <h3>Гостевой визит</h3>
-                    <p>У вас есть возможность<br> посетить 3 бесплатные<br> тренировки</p>
-                    <button type="button" class="button">Узнать стоимость</button>
+                    <p>У вас есть возможность<br> посетить <span class="text-tomato--mob">3 бесплатные</span><br> тренировки</p>
+                    <button type="button" class="button"></button>
                  </li>
             </ul>
             <img class="rates-ellipse--top" src="img/Ellipse 8.svg"  alt=" ">
