--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <img class="about-ellipse--top" src="img/Ellipse 5.svg"  alt=" ">
             <img class="about-ellipse--bottom" src="img/Ellipse 6.svg"  alt=" ">
-            <img class="about-img" src="img/Group 553.avif" alt="">
+            <img class="about-img" src="img/Group 553.png" alt="">
         </section>     
         <div class="advantages-offer-wr">
             <section class="advantages">
