--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </section>
         </div>
-        <!-- <section class="rates">  
+        <section class="rates">  
             <div class="rates-wr">
                 <h1>КЛУБНЫЕ КАРТЫ <span class="text-tomato">FITJOB</span></h1>
                 <p><span class="text-tomato">Выберите подходящий тариф</span> и<br>и приходите заниматься</p>
@@ -131,20 +131,16 @@
             <img class="rates-ellipse--top" src="img/Ellipse 8.svg"  alt=" ">
             <img class="rates-ellipse--bottom-right" src="img/Ellipse 9.svg"  alt=" ">
             <img class="rates-ellipse--top-right" src="img/Ellipse 10.svg"  alt=" ">
-        </section> -->
+        </section>
     </main>
     <footer class="page-footer">
         <section class="form-container" id="form">
             <h2>Желаете узнать подробнее,<br> оставьте заявку и мы вам<br> перезвоним</h2>
               <form class="form" onsubmit="return false;">
-                <!-- <div class="input-wr">
-                    <div class="input">
+                <div class="input-wr">
                         <input type="text" placeholder="Имя" id="name" required>
-                      </div>
-                      <div class="input">
                         <input type="tel" placeholder="7 (___) __ ____" id="phone" required>
-                      </div> 
-                </div> -->
+                </div>
                     <label class="checkbox" for="my-checkbox">
                         <input type="checkbox" id="my-checkbox"/>
                         <span>
